@@ -1541,3 +1541,85 @@ group { name: "elm/entry/handler/end/default";
       }
    }
 }
+
+group { name: "elm/entry/magnifier/default";
+   images {
+      image: "magnifier_bg.png" COMP;
+      image: "magnifier_line.png" COMP;
+   }
+   parts {
+      part { name: "bg";
+         mouse_events: 0;
+         scale: 1;
+         description { state: "default" 0.0;
+            min: 100 55;
+            fixed: 1 1;
+            align: 0 0;
+            image {
+               normal: "magnifier_bg.png";
+            }
+            image.middle: SOLID;
+            fill.smooth: 1;
+         }
+         description { state: "hidden" 0.0;
+            inherit: "default" 0.0;
+            visible: 0;
+         }
+      }
+      part { name: "swallow";
+         type: SWALLOW;
+         mouse_events: 0;
+         scale: 1;
+         description { state: "default" 0.0;
+            rel1 {
+               to: "bg";
+               offset: 4 4;
+            }
+            rel2 {
+               to: "bg";
+               offset: -8 -8;
+            }
+         }
+         description { state: "hidden" 0.0;
+            inherit: "default" 0.0;
+            visible: 0;
+         }
+      }
+      part { name: "outline";
+         mouse_events: 0;
+         scale: 1;
+         description { state: "default" 0.0;
+            fixed: 1 1;
+            image {
+               normal: "magnifier_line.png";
+            }
+            image.middle: SOLID;
+            fill.smooth: 1;
+            rel1.to: "bg";
+            rel2.to: "bg";
+         }
+         description { state: "hidden" 0.0;
+            inherit: "default" 0.0;
+            visible: 0;
+         }
+      }
+   }
+   programs {
+      program { name: "magnifier_show";
+         signal: "elm,action,show,magnifier";
+         source: "elm";
+         action: STATE_SET "default" 0.0;
+         target: "bg";
+         target: "swallow";
+         target: "outline";
+      }
+      program { name: "magnifier_hide";
+         signal: "elm,action,hide,magnifier";
+         source: "elm";
+         action: STATE_SET "hidden" 0.0;
+         target: "bg";
+         target: "swallow";
+         target: "outline";
+      }
+   }
+}
